@@ -19,9 +19,11 @@
 void crash_and_burn( char *message );
 void errno_crash_and_burn( char *message );
 int in_cksum( unsigned short *p, int n );
+int random_data_flag;
 
 /* socket.c */
-int  open_ping_socket(size_t ping_data_size);
+int  open_ping_socket();
+void init_ping_buffer(size_t ping_data_size);
 void socket_set_src_addr(int s, FPING_INADDR src_addr);
 int  socket_sendto_ping(int s, struct sockaddr *saddr, socklen_t saddr_len, uint16_t icmp_seq, uint16_t icmp_id);
 
