@@ -45,7 +45,7 @@
 char *ping_buffer = 0;
 size_t ping_pkt_size;
 
-int open_ping_socket_ipv6(size_t ping_data_size)
+int open_ping_socket_ipv6()
 {
     struct protoent *proto;
     int s;
@@ -64,13 +64,16 @@ int open_ping_socket_ipv6(size_t ping_data_size)
         }
     }
 
+    return s;
+}
+
+void init_ping_buffer_ipv6(size_t ping_data_size)
+{
     /* allocate ping buffer */
     ping_pkt_size = ping_data_size + sizeof(struct icmp6_hdr);
     ping_buffer = (char *) calloc(1, ping_pkt_size);
     if(!ping_buffer)
         crash_and_burn( "can't malloc ping packet" );
-
-    return s;
 }
 
 void socket_set_src_addr_ipv6(int s, FPING_INADDR src_addr)
@@ -89,12 +92,18 @@ int socket_sendto_ping_ipv6(int s, struct sockaddr *saddr, socklen_t saddr_len, 
     struct icmp6_hdr *icp;
     int n;
 
-    // FIXME: randomization
     icp = (struct icmp6_hdr *) ping_buffer;
     icp->icmp6_type  = ICMP6_ECHO_REQUEST;
     icp->icmp6_code  = 0;
     icp->icmp6_seq   = htons(icmp_seq_nr);
     icp->icmp6_id    = htons(icmp_id_nr);
+
+    if (random_data_flag) {
+        for (n = ((void*)&icp->icmp6_data8 - (void *)icp); n < ping_pkt_size; ++n) {
+            ping_buffer[n] = random() & 0xFF;
+        }
+    }
+
     icp->icmp6_cksum = 0;   // The IPv6 stack calculates the checksum for us...
 
     n = sendto(s, icp, ping_pkt_size, 0, saddr, saddr_len);
