@@ -2,6 +2,7 @@ UNRELEASED
   * Use sockaddr_storage and simplify code, so that we can one day
     support both IPv4 and IPv6 with the same binary
   * Fix double entries with fping -u and unreachable hosts
+  * New option -R to use random bytes instead of NULLs (#72, Anthony DeRobertis)
 
 2014-05-03  David Schweikert  <david@schweikert.ch>
   * Version 3.10
